fix: adjust omnibox alignment in toolbar for improved UI consistency; update recipe detail navigation instructions for clarity

--- a/src/app/shared/components/omnibox/omnibox.component.scss
+++ b/src/app/shared/components/omnibox/omnibox.component.scss
@@ -4,10 +4,6 @@
 
     &__field {
         width: 100%;
-
-        .mat-mdc-form-field-subscript-wrapper {
-            display: none;
-        }
     }
 
     &__search-icon {
